feat: added refresh JWT token ability
